switches back to data-src, fixes image jump, removes blur

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,17 +88,11 @@
 .loading {
   position: relative;
 }
-.loading:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  @apply bg-gray-800;
-  opacity: 0.7;
-  z-index: 100;
+.loading img,
+.loading video {
+  opacity: 0;
 }
+
 .loading:after {
   content: "";
   width: 24px;
@@ -121,14 +115,6 @@
   to {
     transform: translate3d(-50%, -50%, 0) rotate(360deg);
   }
-}
-img.blur {
-  filter: blur(20px);
-  transform: scale(1.2);
-}
-video.blur {
-  filter: blur(20px);
-  transform: scale(1.2);
 }
 
 .will-change {
